# pdfcube

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  pdfcube.desktop
debian/: README.Debian  changelog  control  copyright  files  rules
m4/: Makefile.am
man/: Makefile.am  pdfcube.1
src/: Makefile.am  pdfcube.cc
